--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Oluwalonimi OluAlakija</title>
+  
 <style>
 body {
   font-family: sans-serif; 
@@ -19,7 +20,6 @@ body {
 .main-content {
   display: flex;
   justify-content: space-between; 
-  
   align-items: flex-start; 
   
 }
@@ -37,10 +37,10 @@ body {
   }
   
 .left-column {
-  width: 60%; 
+  width: 50%; 
   }
 .right-column {
-  width: 65%; 
+  width: 45%; 
   text-align: right;
 }
 
@@ -56,22 +56,18 @@ body {
 .image-container {
   text-align: center;
   margin-bottom: 20px;
-}
-
-img {
-  max-width: 100%;
+  width: 900px;
   height: auto;
+  object-fit: cover;
 }
 
   html
   {
     background-image: url(https://i.pinimg.com/736x/87/20/2c/87202c581fe461d38757b0f7dc00a917.jpg);
   }
-  img{
-    width: 900px;
-    height: 550px;
-  }
-  main > div {
+  
+  
+  div class="grid-container{
     width: calc(22vw- 10px);
     height: calc(22vw -10px);
     border: 2px solid black;
