changed the top image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       .main-content {
         display: flex;
         justify-content: space-between;
-        align-items: flex-start;
+        align-items: flex-start
       }
 
       h1 {
@@ -74,7 +74,8 @@
         width: 100px;
         height: auto;
         display: block;
-        flex: 2
+        flex: 2;
+        object-fit: cover;
       }
 
       .right-column {
@@ -94,12 +95,6 @@
         margin-top: 20px;
       }
 
-      .image-container {
-        text-align: center;
-        margin-bottom: 20px;
-        object-fit: cover;
-      }
-
       html {
         background-image: url(https://i.pinimg.com/736x/87/20/2c/87202c581fe461d38757b0f7dc00a917.jpg);
       }
@@ -115,7 +110,9 @@
 
     <center>
 
-      <img src="https://i.pinimg.com/736x/b5/a3/17/b5a3173f331b214178ae0fd11a28d069.jpg" alt="Oluwalonimi OluAlakija">
+      <img src="https://i.pinimg.com/736x/b5/a3/17/b5a3173f331b214178ae0fd11a28d069.jpg" 
+           alt="Oluwalonimi OluAlakija"
+            style="width: 1000px; height: 500px;">
 
       <p>In the heart of the University of Chicago, amidst the rigorous pursuit of knowledge and intellectual curiosity, a rising star is making her mark in the world of fashion and media. Meet Oluwalonimi OluAlakija, a junior whose passion for luxury and storytelling is setting her on a path to success.</p>
 
@@ -161,6 +158,9 @@
         </div>
       </div>
     </center>
+     <div class="grid-container">
+       <div class="gridimg">
+         
 
 
     <div class="contact-info">
