just fixed somethings

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       }
 
       .left-img {
-        width: 100px;
+        width: 10px;
         height: auto;
         display: block;
         flex: 2;
@@ -114,7 +114,11 @@
            alt="Oluwalonimi OluAlakija"
             style="width: 1000px; height: 500px;">
 
-      <p>In the heart of the University of Chicago, amidst the rigorous pursuit of knowledge and intellectual curiosity, a rising star is making her mark in the world of fashion and media. Meet Oluwalonimi OluAlakija, a junior whose passion for luxury and storytelling is setting her on a path to success.</p>
+      <p>
+        In the heart of the University of Chicago, amidst the rigorous pursuit of knowledge and intellectual curiosity, a rising star is making her mark in the world of fashion and media. 
+      </p>
+      <p>
+        Meet Oluwalonimi OluAlakija, a junior whose passion for luxury and storytelling is setting her on a path to success.</p>
 
     </center>
 
@@ -150,7 +154,8 @@
         </div>
         <div class="grid-item">
           <img src="https://i.pinimg.com/736x/4f/43/aa/4f43aa17e39ae488d0f260a07c04f114.jpg" alt="Image 5">
-          <div class="caption">Another caption for image 5</div>
+          <div class="caption">Another caption for image 5
+          </div>
         </div>
         <div class="grid-item">
           <img src="https://i.pinimg.com/736x/08/69/bd/0869bd05cc1b6e9cff183222dc4ce8a4.jpg" alt="Image 6">
@@ -161,8 +166,6 @@
      <div class="grid-container">
        <div class="gridimg">
          
-
-
     <div class="contact-info">
       <p>Oluwalonimi OluAlakija</p>
       <p>+123-456-7890</p>
