--- a/index.html
+++ b/index.html
@@ -137,12 +137,16 @@
     <center>
       <div class="grid-container">
         <div class="grid-item">
+          <a href="https://www.goodreads.com/user/show/68752214-oluwalonimi-olualakija" target="_blank">
           <img src="https://i.pinimg.com/736x/0c/82/23/0c8223bee617b3d39feca17b5f34ffd8.jpg" alt="Image 1">
-          <div class="caption">Caption for Image 1</div>
+          <div class="caption">reading</div>
+          </a>
         </div>
         <div class="grid-item">
+          <a href="https://open.spotify.com/album/2ODvWsOgouMbaA5xf0RkJe?si=_6xVGnU9SqawkeTP3fi2HA" target="_blank">
           <img src="https://i.pinimg.com/736x/87/89/5d/87895d05055f6030ee798409821e58ce.jpg" alt="Image 2">
-          <div class="caption">Another caption</div>
+          <div class="caption">listening</div>
+          </a>
         </div>
         <div class="grid-item">
           <img src="https://i.pinimg.com/736x/c7/69/31/c7693134a809412a5aef0f7c31812907.jpg" alt="Image 3">
