--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         grid-template-columns: 30% 30% 40%;
       }
       .headimg{
+        display: block;
+        width: 100%;
+        position: relative;
+        z-index: -1;
         
       }
 
