--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       .header {
         display: flex;
-        justify-content: space-between
+        justify-content: space-between;
       }
 
       .main-content {
@@ -80,22 +80,30 @@
 
       .right-column {
         text-align: right;
-        font-size: 25px;
+        font-size: 40px;
         margin-left: 10px
       }
 
 
       .contact-info {
         margin-top: 20px;
+        text-align: right;
       }
 
       .footer {
-        text-align: right;
-        margin-top: 20px;
+        background-image: url("https://pngimg.com/uploads/barcode/barcode_PNG4.png");
+        text-align: left;
+        width: 200px;
+        height: 100px;
       }
+      
 
       html {
         background-image: url(https://i.pinimg.com/736x/87/20/2c/87202c581fe461d38757b0f7dc00a917.jpg);
+      }
+      p{ 
+        text-align: center;
+        font-size: 25px;
       }
     </style>
   </head>
@@ -112,10 +120,7 @@
     <img class="headimg" src="https://i.pinimg.com/736x/b5/a3/17/b5a3173f331b214178ae0fd11a28d069.jpg" alt="Oluwalonimi OluAlakija">
 
     <p>
-      In the heart of the University of Chicago, amidst the rigorous pursuit of knowledge and intellectual curiosity, a rising star is making her mark in the world of fashion and media.
-    </p>
-    <p>
-      Meet Oluwalonimi OluAlakija, a junior whose passion for luxury and storytelling is setting her on a path to success.</p>
+      In the heart of the University of Chicago, amidst the rigorous pursuit of knowledge and intellectual curiosity, a rising star is making her mark in the world of fashion and media. Meet Oluwalonimi OluAlakija, a junior whose passion for luxury and storytelling is setting her on a path to success.</p>
 
 
     <div class="main-content">
