--- a/index.html
+++ b/index.html
@@ -161,7 +161,11 @@
       </div>
 
       <div class="right-column">
-        <p>With her unique blend of academic prowess, practical experience, and unwavering passion, Oluwalonimi OluAlakija is a force to be reckoned with. As she continues her journey at the University of Chicago, she is poised to make a significant impact on the world of fashion and media. Keep an eye on this rising star, for her future is undoubtedly bright.</p>
+        <p>With her unique blend of academic prowess, practical experience, and unwavering passion, Oluwalonimi OluAlakija is a force to be reckoned with. At the University of Chicago, she's not just a student; she's a dynamic innovator, weaving together the threads of critical theory, business acumen, and creative vision.
+
+Her academic pursuits are not confined to textbooks. Oluwalonimi actively engages with the intellectual landscape, challenging conventional narratives and exploring the intersection of culture, fashion, and media. This intellectual curiosity is coupled with a keen understanding of industry realities, gleaned from her hands-on experiences. Whether it's crafting compelling narratives, analyzing market trends, or developing strategic initiatives, she brings a practical, results-oriented approach to every endeavor.
+
+As she continues her journey at the University of Chicago, she is poised to make a significant impact on the world of fashion and media. Whether she's shaping the future of sustainable fashion, redefining digital storytelling, or championing inclusivity in the industry, Oluwalonimi OluAlakija is a name to watch. Keep an eye on this rising star, for her future is undoubtedly bright, and her contributions will undoubtedly leave a lasting legacy.</p>
       </div>
     </div>
 
